# run-manager

./: CMakeLists.txt  LICENSE  README.md
include/: FileLoader.h
src/: FileLoader.cpp
test/: FileLoaderTest.cpp
